class5/Yaml/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  namespace: dev
  labels:
    app: demo
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
