class5/Yaml/full-k8s-deploy.yaml
# ---------------------------
# Namespace
# ---------------------------
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
# ---------------------------
# Pod
# ---------------------------
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  namespace: dev
spec:
  containers:
    - name: app
      image: nginx
      ports:
        - containerPort: 80
---
# ---------------------------
# Deployment
# ---------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
---
# ---------------------------
# Service
# ---------------------------
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: dev
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
# ---------------------------
# Ingress
# ---------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
